<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <LinearLayout
        android:id="@+id/dynamicContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical"
  >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottonNavBar"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"

        android:layout_gravity="bottom"
        android:background="@color/white"
        android:elevation="10dp"
        android:foregroundGravity="bottom"
        android:orientation="horizontal"
        android:paddingTop="5dp">


        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/matching"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@mipmap/home_icon"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Matching"
                android:textColor="@color/bottom"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/watchList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@mipmap/live_icon"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Watchlist"
                android:textColor="@color/bottom"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@mipmap/tiger_icon"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Rates"
                android:textColor="@color/bottom"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/deals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@mipmap/mix_icon"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Deals"
                android:textColor="@color/bottom"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/listing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@mipmap/member_icon"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Listing"
                android:textColor="@color/bottom"
                android:textSize="12sp" />


        </RadioGroup>
    </LinearLayout>


</LinearLayout>